# Nikiro_docker

./: .gitattributes  Dockerfile  README.md  docker-compose.yaml  ros_entrypoint.sh
micro_ros/install/: .colcon_install_layout  _local_setup_util_ps1.py  _local_setup_util_sh.py  local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
micro_ros/install/micro_ros_agent/lib/: libmicroxrcedds_agent.so.2.4.2
micro_ros/install/micro_ros_setup/config/: agent_ros2_packages.txt  agent_uros_packages.repos  client_ros2_packages.txt  client_uros_packages.repos  utils.sh
micro_ros/log/: latest_build
micro_ros/src/: ros2.repos
nikiro_amr/: nikiro_final.pgm  nikiro_final.yaml
nikiro_amr/src/nikiro_amr/nikiri_amr_base/: CMakeLists.txt  package.xml
nikiro_amr/src/nikiro_amr/nikiro_amr/: CMakeLists.txt  package.xml
nikiro_amr/src/nikiro_amr/nikiro_amr_bringup/: CMakeLists.txt  package.xml
nikiro_amr/src/nikiro_amr/nikiro_amr_bringup/launch/: bringup.launch.py  default_robot.launch.py  depth.launch.py  extra.launch.py  lasers.launch.py  sensors.launch.py
nikiro_amr/src/nikiro_amr/nikiro_amr_description/: CMakeLists.txt  package.xml
nikiro_amr/src/nikiro_amr/nikiro_amr_navigation/: CMakeLists.txt  package.xml
nikiro_amr/src/nikiro_description/: package.xml  setup.cfg  setup.py
nikiro_amr/src/nikiro_description/launch/: display.launch.py  gazebo.launch.py
nikiro_amr/src/nikiro_description/meshes/: base_link.stl  laser.stl  left_wheel.stl  right_wheel.stl
nikiro_amr/src/nikiro_description/urdf/: materials.xacro  (+3 more)
(+255 files in other folders)
