<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nikiro_amr_bringup</name>
  <version>0.0.0</version>
  <description>nikiro_amr_bringup Files</description>
  <maintainer email="logesh15ak@gmail.com">logesh s</maintainer>
  <license>Apache 2.0</license>
  <exec_depend>imu_tools</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>joy_linux</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>micro_ros_agent</exec_depend>
  <exec_depend>depthimage_to_laserscan</exec_depend>
  <exec_depend>laser_filters</exec_depend>
  <exec_depend>rqt_image_view</exec_depend>
  <exec_depend>image_proc</exec_depend>
  <exec_depend>depth_image_proc</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
